<resources>
    <string name="app_name">Om Rooms</string>
    <string name="login_prferance" translatable="false">com.anyemi.omrooms.Utils.login_preference</string>
    <string name="phone_no_preference" translatable="false">com.anyemi.omrooms.Utils.phone_no_preference</string>
    <string name="name_preference" translatable="false">com.anyemi.omrooms.Utils.customer_name</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="checkin">Select Check-in Date</string>
    <string name="check_in_date">Select Check-In Date</string>
    <string name="gender_prompt">Choose your Gender</string>
    <string name="check_in_out_preference" translatable="false">com.anyemi.omrooms.Utils.check_in_out_preference</string>
    <string name="check_out_preference" translatable="false">com.anyemi.omrooms.Utils.check_out_preference</string>
    <string name="no_of_rooms_preference" translatable="false">com.anyemi.omrooms.Utils.no_of_rooms</string>
    <string name="no_of_guests_preference" translatable="false">com.anyemi.omrooms.Utils.no_of_guests</string>
    <string name="city_name_preference" translatable="false">com.anyemi.omrooms.Utils.city_name_preference</string>
    <string name="select_city">Select City</string>
    <string name="state_name_preference" translatable="false">com.anyemi.omrooms.Utils.state_name_preerence</string>
    <string name="district_name_preference" translatable="false">com.anyemi.omrooms.Utils.district_name_preference</string>
    <string name="scan_barcode" translatable="false">Scan Barcode</string>
    <string name="scan_barcode_with_request_code" translatable="false">Scan Barcode with customized request code</string>
    <string name="any_orientation" translatable="false">1D Any Orientation</string>
    <string name="scan_from_fragment" translatable="false">Scan from fragment</string>
    <string name="front_camera" translatable="false">Front Camera</string>
    <string name="custom_activity" translatable="false">Continuous Scan</string>
    <string name="toolbar_activity" translatable="false">Activity with Toolbar</string>
    <string name="custom_scanner" translatable="false">Custom Scanner Activity</string>
    <string name="scanner_with_margin" translatable="false">Scanner with Margin</string>
    <string name="scanner_with_timeout" translatable="false">Finish Scan in 8 Seconds</string>
    <string name="turn_on_flashlight" translatable="false">Turn on Flashlight</string>
    <string name="turn_off_flashlight" translatable="false">Turn off Flashlight</string>
    <string name="title_activity_tabbed_scanning" translatable="false">Tabbed Scanning</string>
    <string name="tabs" translatable="false">Tabs</string>
    <string name="start_transaction" translatable="false">Start</string>
    <string name="developed_by" translatable="false">Designed &amp; Developed by</string>
    <string name="transaction" translatable="false">Process is going on......</string>
    <string name="status" translatable="false">Transaction status check is going on......</string>
    <string name="button" translatable="false">PaymentViaMosambee</string>
    <string name="orderId" translatable="false">Order ID</string>
    <string name="Amount" translatable="false">Amount</string>
    <string name="cashback" translatable="false">Cashback Amount</string>
    <string name="Rs" translatable="false">\u20B9</string>
    <string name="info_txt" translatable="false">You will receive a collect request from anyEMI</string>
    <string name="loading_txt">Loading...</string>
    <string-array name="payment_names">
        <item>*99#</item>
        <item>Aadhar Pay</item>
        <item>Bharat QR</item>
        <item>BHIM</item>
        <item>anyEMI Wallet</item>
        <item>Credit Card</item>
        <item>Cheque</item>
        <item>Debit Card</item>
        <item>Jio Money</item>
        <item>Net Banking</item>
        <item>Paytm</item>
        <item>Paytm</item>
        <item>PhonePe</item>
        <item>Paytm QR</item>
        <item>UPI</item>
        <item>UPI</item>
        <item>PayUMoney</item>
        <item>FreeCharge</item>
        <item>Airtel Money</item>
        <item>M-Pesa</item>
        <item>anyEMI Wallet</item>
    </string-array>
    <string-array name="payment_ids">
        <item>*99#</item>
        <item>AADHAR</item>
        <item>BQ</item>
        <item>BHIM</item>
        <item>C</item>
        <item>CC</item>
        <item>CQ</item>
        <item>DC</item>
        <item>Jio</item>
        <item>NB</item>
        <item>Paytm</item>
        <item>paytm</item>
        <item>PhonePe</item>
        <item>PQ</item>
        <item>UPI</item>
        <item>SBIUPI</item>
        <item>PayU</item>
        <item>FC</item>
        <item>Airtel</item>
        <item>M-Pesa</item>
        <item>AW</item>
    </string-array>
    <string-array name="area_array">
        <item>Select Area</item>
        <item>Yelamanchili</item>
        <item>Narsipatnam</item>

    </string-array>
    <string-array name="area_state">

        <item>Andhra Pradesh</item>
        <item>Telangana</item>
        <item>Odisha</item>
        <item>Bihar</item>
    </string-array>
    <string-array name="ary_login_type">
        <item>Select Taxes/Bills</item>
        <item>CDMA Taxes/Bills</item>
        <item>GVMC Taxes/Bills</item>
        <item>APEPDCL Power Bills</item>
        <item>RECS Bills</item>
    </string-array>
    <string-array name="ary_devices">
        <item>Select Device</item>
        <item>Mosambee</item>
        <item>Ezetap</item>

    </string-array>
    <string-array name="area_id_array">
        <item>0</item>
        <item>1137</item>
        <item>1136</item>

    </string-array>
    <string-array name="tax_type_array">
        <item>Select Taxes/Bills</item>
        <item>Property Tax</item>
        <item>Water Tax</item>
        <item>Semi Bulk</item>
        
        

    </string-array>
    <string-array name="bank_names">
        <item>Select Bank</item>

    </string-array>
    <string-array name="branch_names">
        <item>Select Branch</item>

    </string-array>
    <string-array name="tax_id_array">
        <item>0</item>
        <item>HT</item>
        <item>TAP</item>
        <item>BSB</item>
        <item>DN</item>
        <item>DNP</item>

    </string-array>
    <string name="waiting_for_card">Please insert or swipe card now.</string>
    <string name="no_card_detected">No card detected. Please insert or swipe card again and press check card.</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Please use mag card</string>
    <string name="pin_entered">PIN entered</string>
    <string name="pin_bypassed">pin bypassed</string>
    <string name="pin_canceled">PIN canceled</string>
    <string name="pin_timeout">PIN timeout</string>
    <string name="key_error">Key error</string>
    <string name="pin_wrong_pin_length">Pin wrong length</string>
    <string name="nfc_waiting_for_card">waiting for card</string>
    <string name="nfc_waiting_for_card_removal">waiting for card removal</string>
    <string name="nfc_card_removed">card removed</string>
    <string name="nfc_timeout">timeout</string>
    <string name="nfc_card_not_supported">card not supported</string>
    <string name="nfc_multiple_card_detected">multiple card detected</string>
    <string name="nfc_card_detected">card detected</string>
    <string name="no_pin">No PIN</string>
    <string name="bad_swipe">Bad Swipe. Please swipe again.</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="mag_head_fail">Magnetic head fail</string>
    <string name="card_no_response">Check card no response</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="nfc_track2">Card Tapped (Track 2 Emulation):\n</string>
    <string name="use_icc_card">Please use ICC card</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="pin_ksn">PIN KSN:</string>
    <string name="track_ksn">Track KSN:</string>
    <string name="emv_ksn">EMV KSN:</string>
    <string name="uid">UID:</string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="card_data">Card Data: </string>
    <string name="start_emv_fail">Start EMV failed</string>
    <string name="start_emv_success">Start EMV success</string>
    <string name="app_version">App Version: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery Level: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="unknown">Unknown</string>
    <string name="set_amount">Set Amount</string>
    <string name="amount_confirmed">Amount confirmed</string>
    <string name="amount_canceled">Amount cancelled</string>
    <string name="please_confirm_amount">Please confirm amount on WisePad</string>
    <string name="enter_pin">Please enter PIN on WisePad</string>
    <string name="online_process_requested">Online process requested.</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="batch_data">Batch Data:\n</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="please_select_app">Please select app</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="transaction_approved">Approved</string>
    <string name="transaction_terminated">Terminated</string>
    <string name="transaction_declined">Offline Declined</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_not_icc">Please use Mag Card</string>
    <string name="transaction_app_fail">Card Block</string>
    <string name="transaction_device_error">Device Error</string>
    <string name="transaction_application_blocked">transaction application blocked</string>
    <string name="transaction_icc_card_removed">transaction icc card removed</string>
    <string name="transaction_card_blocked">transaction card blocked</string>
    <string name="transaction_condition_not_satisfied">transaction condition not satisfied</string>
    <string name="yes">Yes</string>
    <string name="no_cancel">No</string>
    <string name="cancel_title">May We Know The Reson Of Cancellation. We Will Try To Improvise Your Experience Further</string>
    <string name="cancel_alert">Do Yoy Really Want To Cancel This Booking ?</string>
    <string name="reason">Reason:</string>
</resources>